update chart-fx note